Adding scroll and flatness, integrates with formspree API

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 	<div id="maincont" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
         <p>Sign up and we'll let you know when we launch</p>
 		<div id="signupform" class="sb-search clearfix">
-			<form method="post" id="contact" class="clearfix" action="http://formspree.io/sudheesh95@gmail.com">
-				<input class="sb-search-input" placeholder="Enter your email ..." type="email" value="">
-				<input class="sb-search-submit" value="" type="submit">
+			<form method="POST" id="contact" class="clearfix" action="//formspree.io/sudheesh95@gmail.com">
+				<input class="sb-search-input" placeholder="Enter your email ..." type="email" value="" name="email">
+				<input class="sb-search-submit" value="" name="submit" type="submit">
 				<button class="formbutton" type="submit"><span class="fa fa-envelope"></span></button>
 			</form>
 		</div>
